OldStuff/tests/copies/newAndNeedChangeTests/fail/LessThan.java
package fail;

import java.lang.System;

public class LessThan {

  public static void main(String[] args ) {
    "hello" < 23;
  }

}
